--- a/index.html
+++ b/index.html
@@ -25,6 +25,32 @@
         </div>
     </header>
 
+    <main>
+        <div class="container-xl">
+            <div class="row py-4">
+                <div class="col-lg-4 my-2">
+                    <div class="square"></div>
+                </div>
+                <div class="col-lg-4 my-2">
+                    <div class="square"></div>
+                </div>
+                <div class="col-lg-4 my-2">
+                    <div class="square"></div>
+                </div>
+                <div class="col-lg-4 my-2">
+                    <div class="square"></div>
+                </div>
+                <div class="col-lg-4 my-2">
+                    <div class="square"></div>
+                </div>
+                <div class="col-lg-4 my-2">
+                    <div class="square"></div>
+                </div>
+                
+            </div>
+        </div>
+    </main>
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
