--- a/index.html
+++ b/index.html
@@ -29,22 +29,44 @@
         <div class="container-xl">
             <div class="row py-4">
                 <div class="col-lg-4 my-2">
-                    <div class="square"></div>
+                    <div class="square">
+                        <img src="./assets_day1/img/Foto.jpg" alt="">
+                        <p>Accusamus Beatae Ad Facilis Cum Similique
+                            Qui Sunt</p>
+                    </div>
                 </div>
                 <div class="col-lg-4 my-2">
-                    <div class="square"></div>
+                    <div class="square">
+                        <img src="./assets_day1/img/Foto.jpg" alt="">
+                        <p>Reprehenderit Est Deserunt Velit Ipsam</p>
+                    </div>
                 </div>
                 <div class="col-lg-4 my-2">
-                    <div class="square"></div>
+                    <div class="square">
+                        <img src="./assets_day1/img/Foto.jpg" alt="">
+                        <p>Officia Porro Iure Quia Iusto Qui Ipsa Ut
+                            Modi</p>
+                    </div>
                 </div>
                 <div class="col-lg-4 my-2">
-                    <div class="square"></div>
+                    <div class="square">
+                        <img src="./assets_day1/img/Foto.jpg" alt="">
+                        <p>Culpa Odio Esse Rerum Omnis Laboriosam
+                            Voluptate Repudiandae</p>
+                    </div>
                 </div>
                 <div class="col-lg-4 my-2">
-                    <div class="square"></div>
+                    <div class="square">
+                        <img src="./assets_day1/img/Foto.jpg" alt="">
+                        <p>Natus Nisi Omnis Corporis Facere
+                            Molestiae Rerum In</p>
+                    </div>
                 </div>
                 <div class="col-lg-4 my-2">
-                    <div class="square"></div>
+                    <div class="square">
+                        <img src="./assets_day1/img/Foto.jpg" alt="">
+                        <p>Accusamus Ea Aliquid Et Amet Sequi Nemo</p>
+                    </div>
                 </div>
                 
             </div>
