[FIX] Fix text Milestone1

--- a/index.html
+++ b/index.html
@@ -31,41 +31,43 @@
                 <div class="col-lg-4 my-2">
                     <div class="square">
                         <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>Accusamus Beatae Ad Facilis Cum Similique
-                            Qui Sunt</p>
+                        <p>01-07-2024</p>
+                        <h4>skate park</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 my-2">
                     <div class="square">
                         <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>Reprehenderit Est Deserunt Velit Ipsam</p>
+                        <p>16-07-2024</p>
+                        <h4>passeggiata</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 my-2">
                     <div class="square">
                         <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>Officia Porro Iure Quia Iusto Qui Ipsa Ut
-                            Modi</p>
+                        <p>01-07-2024</p>
+                        <h4>alpi</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 my-2">
                     <div class="square">
                         <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>Culpa Odio Esse Rerum Omnis Laboriosam
-                            Voluptate Repudiandae</p>
+                        <p>21-08-2024</p>
+                        <h4>sagra</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 my-2">
                     <div class="square">
                         <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>Natus Nisi Omnis Corporis Facere
-                            Molestiae Rerum In</p>
+                        <p>23-08-2024</p>
+                        <h4>watergun</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 my-2">
                     <div class="square">
                         <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>Accusamus Ea Aliquid Et Amet Sequi Nemo</p>
+                        <p>30-08-2024</p>
+                        <h4>riviera</h4>
                     </div>
                 </div>
                 
