[UPD] Add function

--- a/index.html
+++ b/index.html
@@ -27,50 +27,14 @@
 
     <main>
         <div class="container-xl">
-            <div class="row py-4">
-                <div class="col-lg-4 my-2">
+            <div id="card" class="row py-4">
+                <!-- <div class="col-lg-4 my-2">
                     <div class="square">
                         <img src="./assets_day1/img/Foto.jpg" alt="">
                         <p>01-07-2024</p>
                         <h4>skate park</h4>
-                    </div>
+                    </div> -->
                 </div>
-                <div class="col-lg-4 my-2">
-                    <div class="square">
-                        <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>16-07-2024</p>
-                        <h4>passeggiata</h4>
-                    </div>
-                </div>
-                <div class="col-lg-4 my-2">
-                    <div class="square">
-                        <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>01-07-2024</p>
-                        <h4>alpi</h4>
-                    </div>
-                </div>
-                <div class="col-lg-4 my-2">
-                    <div class="square">
-                        <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>21-08-2024</p>
-                        <h4>sagra</h4>
-                    </div>
-                </div>
-                <div class="col-lg-4 my-2">
-                    <div class="square">
-                        <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>23-08-2024</p>
-                        <h4>watergun</h4>
-                    </div>
-                </div>
-                <div class="col-lg-4 my-2">
-                    <div class="square">
-                        <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>30-08-2024</p>
-                        <h4>riviera</h4>
-                    </div>
-                </div>
-                
             </div>
         </div>
     </main>
