--- a/index.html
+++ b/index.html
@@ -15,31 +15,40 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
-    <header>
-        <div class="container-xl">
-            <div class="row py-5" id="row-header">
-                <div class="col-lg-12 text-center">
-                    <h1>estate '24</h1>
+    <div class="all-container opacity-25">
+        <header>
+            <div class="container-xl">
+                <div class="row py-5" id="row-header">
+                    <div class="col-lg-12 text-center">
+                        <h1>estate '24</h1>
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
 
-    <main>
-        <div class="container-xl">
-            <div id="card" class="row py-4">
-                <!-- <div class="col-lg-4 my-2">
-                    <div class="square">
-                        <img src="./assets_day1/img/Foto.jpg" alt="">
-                        <p>01-07-2024</p>
-                        <h4>skate park</h4>
-                    </div> -->
+        <main>
+            <div class="container-xl">
+                <div id="card" class="row py-4">
+                    <!-- <div class="col-lg-4 my-2">
+                        <div class="square">
+                            <img src="./assets_day1/img/Foto.jpg" alt="">
+                            <p>01-07-2024</p>
+                            <h4>skate park</h4>
+                        </div> -->
+                    </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
 
+        <div class="overlay">
+            <div class="btn-overlay text-center">
+                <button class="btn">chiudi</button>
+            </div>
+            <div>
+                <img class="img-overlay" src="./assets_day1/img/Foto.jpg" alt="">
+            </div>
+        </div>
+    </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
