[UPD] Gestione dell'overlay con i click

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="all-container opacity-25">
+    <div class="all-container">
         <header>
             <div class="container-xl">
                 <div class="row py-5" id="row-header">
@@ -40,7 +40,7 @@
             </div>
         </main>
 
-        <div class="overlay">
+        <div class="overlay d-none">
             <div class="btn-overlay text-center">
                 <button class="btn">chiudi</button>
             </div>
