--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     <div class="all-container">
+        <div class="opacity-all d-none"></div>
         <header>
             <div class="container-xl">
                 <div class="row py-5" id="row-header">
@@ -40,6 +41,7 @@
             </div>
         </main>
 
+
         <div class="overlay d-none">
             <div class="btn-overlay text-center">
                 <button class="btn">chiudi</button>
@@ -48,7 +50,10 @@
                 <img class="img-overlay" src="./assets_day1/img/Foto.jpg" alt="">
             </div>
         </div>
+
     </div>
+
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
